<resources>
    <string name="app_name">Aula 03 - Fragmentos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_contacts">Contato</string>

    <string name="menu_authors">Autores</string>
    <string name="menu_students">Alunos</string>
    <string name="menu_biography">Biografias</string>
    <string name="menu_game_one">Jogo 1</string>
    <string name="menu_game_two">Jogo 2</string>
    <string name="menu_game_three">Jogo 3</string>
    <string name="menu_send">Send</string>
    <string name="menu_internet">Internet</string>

    <string name="first_name">Pablo Borsone</string>
    <string name="first_ra">RA: 185296</string>
    <string name="first_description">Uma pessoa interessada pela vida e ainda mais por Android.</string>
    <string name="second_name">Matheus Bonafé</string>
    <string name="second_ra">RA: 203380</string>
    <string name="second_description">Entusiasta por tudo que é tecnologia e basquete.</string>

    <string name="menu_title">Communicate</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>

    <string name="icon_text">what is going on</string>
    <string name="to_recipient">Recipient:</string>
    <string name="message">Type your Message</string>
    <string name="send">Send</string>

    <string name="password">Password:</string>
    <string name="subject">Subject:</string>
    <string name="linear_login">Login:</string>

    <string-array name="rest_requests">
        <item>GET</item>
        <item>PUT</item>
        <item>POST</item>
        <item>PATCH</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_text_not_found">Message not found</string>
    <string name="mail_subject_hint">Type your Subject</string>
    <string name="mail_password_hint">Type your Password</string>
    <string name="mail_login_hint">Type your Login</string>
    <string name="mail_recipient_hint">Type your Recipient</string>
    <string name="main_welcome_text">Welcome! We hope you have a nice experience around here! (:</string>
    <string name="authors_message_received">Mensagem:</string>
    <string name="previous_biography_button_text">prev</string>
    <string name="next_biography_button_text">next</string>
    <string name="kotlin_nav_text">Kotlin</string>
    <string name="nav_database">Banco de Dados</string>
    <string name="nav_internet">Internet</string>
    <string name="action_stats">Stats</string>
    <string name="stats_first_text">Pessoa que o jogador menos sabe o nome</string>
    <string name="stats_second_text">O nome que mais faz o jogador errar</string>
    <string name="stats_third_text">Porcentagem de erros x jogadas</string>
    <string name="radius_atualizar">Trocar</string>
    <string name="radius_enviar">Validar</string>
    <string name="action_score">Status Jogo 3</string>

</resources>
