<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/to_recipient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/to_recipient"/>

    <EditText
        android:id="@+id/recipient_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Type your Recipient"
        android:inputType="text"
        android:gravity="top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/to_recipient"
        android:layout_margin="0dp"
        />


    <TextView
        android:id="@+id/relative_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:textColor="@color/black"
        android:layout_below="@+id/recipient_hint"
        android:text="@string/linear_login"/>

    <EditText
        android:id="@+id/relative_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Type your Login"
        android:inputType="text"
        android:gravity="top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/relative_login"
        android:layout_margin="0dp"
        />

    <TextView
        android:id="@+id/relative_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:textColor="@color/black"
        android:layout_below="@+id/relative_login_text"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/relative_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Type your Password"
        android:inputType="textPassword"
        android:gravity="top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/relative_password" />

    <TextView
        android:id="@+id/relative_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:textColor="@color/black"
        android:layout_below="@+id/relative_password_text"
        android:text="@string/subject" />

    <EditText
        android:id="@+id/relative_about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Type your Subject"
        android:inputType="text"
        android:gravity="top"
        android:layout_below="@id/relative_about"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:gravity="center"
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/relative_about_text"
        android:layout_above="@+id/send_button"
        android:paddingTop="20dp" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/send" />


</RelativeLayout>
