<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/stats_first_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/stats_first_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stats_first_tv"
        app:layout_constraintTop_toTopOf="@+id/stats_first_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stats_first_tv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/stats_first_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stats_second_tv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stats_second_text"
        app:layout_constraintEnd_toEndOf="@+id/stats_first_tv"
        app:layout_constraintStart_toStartOf="@+id/stats_first_tv"
        app:layout_constraintTop_toBottomOf="@+id/stats_first_tv" />

    <TextView
        android:id="@+id/stats_second_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/stats_second_tv"
        app:layout_constraintEnd_toEndOf="@+id/stats_first_value"
        app:layout_constraintStart_toStartOf="@+id/stats_first_value"
        app:layout_constraintTop_toTopOf="@+id/stats_second_tv" />

    <TextView
        android:id="@+id/stats_third_tv"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stats_third_text"
        app:layout_constraintStart_toStartOf="@+id/stats_second_tv"
        app:layout_constraintTop_toBottomOf="@+id/stats_second_tv" />

    <TextView
        android:id="@+id/stats_third_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/stats_third_tv"
        app:layout_constraintEnd_toEndOf="@+id/stats_second_value"
        app:layout_constraintStart_toStartOf="@+id/stats_second_value"
        app:layout_constraintTop_toTopOf="@+id/stats_third_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>